[tool.poetry]
name = "dash101"
version = "0.1.0"
description = ""
authors = ["chatdanai.l <chatdanai.l@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.4.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
